# oopsie-tools

./: .gitignore  AI_CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  help-request--data-conversion.md  help-request--robot-profile.md
configs/: contributor_config.yaml
configs/robot_profiles/: act_plus_plus_robot_profile.yaml  openpi_example_robot_profile.yaml  template.yaml
examples/inference_examples/act_plus_plus/: run_policy.py  run_policy_browser.py  run_policy_bulk.py  run_policy_inloop.py
examples/inference_examples/openpi/: run_policy_bulk.py  run_policy_inloop.py
oopsie_tools/: __init__.py
oopsie_tools/annotation_tool/: __init__.py  annotator_server.py  episode_recorder.py  rollout_annotator.py
oopsie_tools/annotation_tool/templates/: questionnaire.yaml
oopsie_tools/annotation_tool/ui/: annotator.html  overview.html  task.html
oopsie_tools/test/: conftest.py  mock_bulk_inference.py  test_episode_recorder.py  test_robot_setup.py  test_rollout_annotator.py  test_validate.py
oopsie_tools/test/fixtures/: make_invalid.py  make_valid.py
oopsie_tools/utils/: inspect_h5.py  rlds_utils.py  roboarena_utils.py  robot_profile.py  rotation_utils.py
oopsie_tools/utils/robot_profile/: robot_profile.py
oopsie_tools/utils/validation/: episode_data.py  episode_loader.py  episode_validator.py  validation_utils.py
scripts/: launch_annotator.sh  migrate_hdf5_format.py
scripts/dataset_conversion/: convert_ar_aloha_data.py  convert_rlds_to_hdf5.py
scripts/validate_and_upload/: upload.py  validate.py
